
Added multical602 heat meter.

Version 1.5.0: 2021-11-06

Close a security hole where you could trivially spoof an encrypted meter
by sending an unencrypted telegram with the same id.

Fixed a buffer overflow bug triggered by a bad variable length field at the end of a telegram.

Added support for Qundis Q heat 5.5.

Jacek27 added support for the Munia temp/hygrometer. Thanks Jacek27!

Apator162 decoding much improved.

Improved verbose logging to show if you are not in the dialout
group when trying to find dongles. Install now adds the current
user to the dialout group as well.

Added support for the Hydrocal-M3 heating/cooling meter.
Added support for the Apator uniSMART gas meter.

You can now decode a telegram just by supplying hex on the command line:
wmbusmeters --format=json <hex_string>  MyMeter auto 12345678 NOKEY
or just
wmbusmeters <hex_string>

Added --listunits to list all quantities and the units for each quantity
that wmbusmeteres knows about.

Tomasz Gramza added manual offset setting to the apator162 meter driver.
You can now specify for example: apator162(offset=29) to use the 4 bytes
at offset 29 in the telegram as the water consumption. Other offsets
known to work for apators are 9,12,20,23. This is useful as a final
resort to get your apator162 readout working. You have to test different
offsets until it works. Thanks Tomasz!

Version 1.4.0: 2021-08-09

Fixed a race that sometimes caused wmbusmeters to crash when resetting the dongles,
which happens by default every 23 hours.

Fixed two crashes that could be triggered with broken telegrams. Crashes found by fuzzing.

Improved detection of the amb8465 dongle. The detection code could be confused
if the dongle was receiving a lot of valid telegrams at the same time.

Added telegram content sent by Axioma W1 meter to driver q400,
since Axioma  identifies itself as a q400 meter.

You can now add constant fields using --field_extra_info=floor54 and